--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,8 +29,8 @@
             src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
     <script type="text/javascript"
             src="{% static "js/autogrow.js" %}"></script>
-    <script type="text/javascript" src="{% static "js/global.js" %}"></script>
-
+    <script type="text/javascript"
+            src="{% static "js/global.js" %}"></script>
 
 </head>
 <body>
