--- a/templates/layout.html
+++ b/templates/layout.html
@@ -43,12 +43,13 @@
                 </h1>
             </div>
             <div class="circle--fluid--cell circle--fluid--primary">
+                {% if user.is_authenticated %}
                 <nav>
                     <ul class="circle--inline">
-                        <li><a href="#">nav</a></li>
-                        <li><a href="#">here?</a></li>
+                        <li><a href="{% url 'accounts:profile' %}">My Profile</a></li>
                     </ul>
                 </nav>
+                {% endif %}
             </div>
             <div class="circle--fluid--cell circle--fluid--secondary">
                 <nav>
@@ -58,8 +59,7 @@
                             <li><a href="{% url 'accounts:sign_in' %}">Sign
                                 In</a></li>
                         {% else %}
-                            <!-- view profile link here? -->
-                            <!-- edit profile link here? -->
+                            <li><a href="{% url 'accounts:profile_edit' %}">Edit My Profile</a></li>
                             <li><a href="{% url 'accounts:sign_out' %}">Sign Out</a></li>
                         {% endif %}
                     </ul>
